documentation/server-setup/iptables.v4
*filter

-P INPUT ACCEPT
-P FORWARD DROP
-P OUTPUT ACCEPT

-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp --icmp-type any -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2000 -j ACCEPT

-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables REJECT: " --log-level 7
-A INPUT -j REJECT --reject-with icmp-port-unreachable

COMMIT
